--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
     "name": "YouTube Music Volume Fixer",
     "version": "1.0",
     "description": "Changes the volume scaling of the YouTube Music volume slider.",
+    "author": "Jose Manuel Orozco III",
     "icons": {
         "48": "icons/ytmvf-48.png",
         "96": "icons/ytmvf-96.png"
@@ -24,5 +25,6 @@
                 "yt-music-volume-fixer.js"
             ]
         }
-    ]
+    ],
+    "incognito": "split"
 }
