feat: add main extension funcitonality with settings for max volume
Overall, overhauled the way the extension interacts with the storage
system so no matter where it's running (background, popup, etc.),
the storage system will synchronize between scripts. Will consider
using browser.storage.sync to have it sync settings between devices.

manifest.json -
* Added storage permissions

storageAvailable.js -
* Added global plugin name variable `PL_NAME`
* Added `storageAvailable` function to check if plugin is able to add
to storage type

yt-music-volume-fixer.js -
* Moved `storageAvailable` function to storageAvailable.js
* Changed storage API from `localStorage` to `browser.storage.local`
for shared extension storage
* Added listener for `maxVolume` storage changes

popup.html -
* Removed "no storage" dialouge because I felt it wasn't needed anymore

popup.js -
* Moved `storageAvailable` function to storageAvailable.js
* Removed test code in the `userInput.addEventListener()` function and
implemented storage functionality

--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,16 @@
         "48": "icons/ytmvf-48.png",
         "96": "icons/ytmvf-96.png"
     },
+    "permissions": [
+        "storage"
+    ],
     "browser_action": {
         "default_icon": {
             "32": "icons/ytmvf-32.png",
             "16": "icons/ytmvf-16.png"
         },
         "default_title": "YouTube Music Volume Fixer",
-        "default_popup": "popup/ytmvf.html"
+        "default_popup": "popup/popup.html"
     },
     "content_scripts": [
         {
@@ -22,6 +25,7 @@
                 "*://music.youtube.com/*"
             ],
             "js": [
+                "storageAvailable.js",
                 "yt-music-volume-fixer.js"
             ]
         }
