refactor: removed old code and renamed global plugin name
Got rid of deprecated code for `storageAvailable.js` and changed the use for global variables.

--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
                 "*://music.youtube.com/*"
             ],
             "js": [
-                "storageAvailable.js",
+                "globals.js",
                 "yt-music-volume-fixer.js"
             ]
         }
